# sci_ex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  mix.exs
benchmarks/: array_operations.ex  parallel_impl.exs
benchmarks/output/: array_operations.html  array_operations_10_6_comparison.html  array_operations_10_6_cos.html  parallelism.html
lib/: sci_ex.ex
lib/sci_ex/: array1.ex  array2.ex  array_helpers.ex  binary_operations.ex  complex_32.ex  complex_64.ex  complex_array_helpers.ex  complex_array_module_builder.ex  fft.ex  float_array_helpers.ex  float_array_module_builder.ex  operators.ex  random.ex  random_dist_builder.ex  rust_option.ex  sci_ex_nif.ex  statistics.ex  symbolic.ex  types.ex  visualization.ex
lib/sci_ex/complex_32/: array1.ex  array2.ex  array3.ex  array4.ex  array5.ex  array6.ex
lib/sci_ex/complex_64/: array1.ex  array2.ex  array3.ex  array4.ex  array5.ex  array6.ex
native/sci_ex_nif/: Cargo.toml  README.md
native/sci_ex_nif/src/: array_binary_operations.rs  array_builders.rs  array_comparisons.rs  c64.rs  datatypes.rs  expression.rs  f32_array_binary_operations.rs  f32_array_comparisons.rs  f32_math_functions.rs  f64_array_binary_operations.rs  f64_array_comparisons.rs  f64_math_functions.rs  fft_float32.rs  fft_float64.rs  kde.rs  lib.rs  math_complex32.rs  math_complex64.rs  math_float32.rs  math_float64.rs  math_functions.rs  stats.rs  visualization.rs
scripts/: rust_generator.exs
test/: sci_ex_test.exs
test/sci_ex_test/: random_test.exs  statistics_test.exs  visualization_test.exs
(+52 files in other folders)
