[package]
name = "sci_ex_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sci_ex_nif"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.11"
rustler = "0.36.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
rand_chacha = "0.3.1"
rand = { version = "0.8", features = ["alloc"] }
statrs = { version = "0.18.0", features = ["rand"] }
