[package]
name = "sci_ex_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sci_ex_nif"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.11"
rustler = "0.36.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndrustfft = "0.5.0"
rand_chacha = "0.3.1"
rand = { version = "0.8", features = ["alloc"] }
statrs = { version = "0.18.0", features = ["rand"] }
contour = "0.13.1"
geo-types = "0.7.16"
ndarray_images = "0.1.0"